# InterCode-ALFA

./: LICENSE.txt  README.md  pyproject.toml
src/icalfa/: __init__.py  main.py
src/icalfa/assets/: __init__.py
src/icalfa/assets/datasets/: nl2bash_fs_1.json  nl2bash_fs_2.json  nl2bash_fs_3.json  nl2bash_fs_4.json  nl2bash_fs_5.json
src/icalfa/assets/docker/: nl2bash1.Dockerfile  nl2bash2.Dockerfile  nl2bash3.Dockerfile  nl2bash4.Dockerfile  nl2bash5.Dockerfile  setup_nl2b_fs_1.sh  setup_nl2b_fs_2.sh  setup_nl2b_fs_3.sh  setup_nl2b_fs_5.sh
src/icalfa/envs/: __init__.py  ic_env.py
src/icalfa/envs/bash/: bash_env.py
src/icalfa/utils/: __init__.py  data_loader.py
